# tstkit_project

./: README.md  pyproject.toml
src/tstkit/: calc_rate.py  config.py  events.py  kmc_core.py  main.py  neb_graph.py  process.py  rates.py  read_freq.py  utils.py
src/tstkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: 1000.csv  1400.csv  1800.csv  200.csv  2200.csv  300.csv  400.csv  500.csv  600.csv  800.csv  D_vs_T.csv  D_vs_T.yaml  fitted_data.yaml  input.yaml  matrix.yaml  sites.vasp  sites.vasp.bk  sites.vesta  test.py
